--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevDetective - GitHub</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="manifest" href="./assets/site.webmanifest">
 
     <!-- Fonts -->
@@ -23,7 +23,7 @@
             <h1 class="title">DevDetective</h1>
             <div id="btn-mode">
                 <p id="mode-text">DARK</p>
-                <div class="icon-container"><img id="mode-icon" src="./assets/images/moon-icon.svg" alt=""></div>
+                <div class="icon-container"><img id="mode-icon" src="./moon-icon.svg" alt=""></div>
             </div>
         </header>
         <main>
@@ -64,19 +64,19 @@
                         </div>
                         <div class="profile-bottom-wrapper">
                             <div class="profile-info">
-                                <div class="bottom-icons"><img src="./assets/images/location-icon.svg" alt=""></div>
+                                <div class="bottom-icons"><img src="./location-icon.svg" alt=""></div>
                                 <p id="location"></p>
                             </div>
                             <div class="profile-info">
-                                <div class="bottom-icons"><img src="./assets/images/website-icon.svg" alt=""></div>
+                                <div class="bottom-icons"><img src="./website-icon.svg" alt=""></div>
                                 <a href="#" id="page"></a>
                             </div>
                             <div class="profile-info">
-                                <div class="bottom-icons"><img src="./assets/images/twitter-icon.svg" alt=""></div>
+                                <div class="bottom-icons"><img src="./twitter-icon.svg" alt=""></div>
                                 <a href="#" id="twitter"></a>
                             </div>
                             <div class="profile-info">
-                                <div class="bottom-icons"><img src="./assets/images/company-icon.svg" alt=""></div>
+                                <div class="bottom-icons"><img src="./company-icon.svg" alt=""></div>
                                 <p id="company"></p>
                             </div>
                         </div>
